CHANGES IN VERSION 1.1.17
------------------------
 o bug fixed in gheatmap, remove inherit aes from ggtree <2015-08-27, Thu>
 o add 'width' parameter to add_legend, now user can specify the width of legend bar <2015-08-27, Thu>
 o add 'colnames_position' parameter to gheatmap, now colnames can be display on the top of heatmap <2015-08-27, Thu> 
 o theme_transparent to make background transparent <2015-08-27, Thu>
 o subview for adding ggplot object (subview) to another ggplot object (mainview) <2015-08-27, Thu>  
 
CHANGES IN VERSION 1.1.16
------------------------
 o update citation <2015-08-17, Mon>
 
CHANGES IN VERSION 1.1.15
------------------------
 o open text angle parameter for annotation_clade/annotation_clade2 <2015-08-13, Thu>
 o support changing size of add_legend <2015-08-13, Thu>
 o reroot methods for phylo and beast <2015-08-07, Fri>
 
CHANGES IN VERSION 1.1.14
------------------------
 o update paml_rst to compatible with only marginal ancestral sequence or joint ancestral sequence available <2015-08-07, Fri>
 
CHANGES IN VERSION 1.1.13
------------------------
 o implement annotation_image <2015-08-01, Sat>
 o better implementation of geom_tiplab for accepting aes mapping and auto add align dotted line <2015-08-01, Sat>
 o open group_name parameter of groupOTU/groupClade to user <2015-08-01, Sat>
 
CHANGES IN VERSION 1.1.12
------------------------
 o update vignette according to the changes <2015-07-31, Fri>
 o add mapping parameter in ggtree function <2015-07-31, Fri>
 o extend groupClade to support operating on tree view <2015-07-31, Fri>
 o extend groupOTU to support operating on tree view <2015-07-31, Fri>
 o new implementation of groupClade & groupOTU <2015-07-31, Fri>
 
CHANGES IN VERSION 1.1.11
------------------------
 o annotation_clade and annotation_clade2 functions. <2015-07-30, Thu>
 o better add_legend implementation. <2015-07-30, Thu>
 o add ... in theme_tree & theme_tree2 for accepting additional parameter. <2015-07-30, Thu>